# HomeBoy

./: .gitattributes  .gitignore  .gitmodules  AIBenchmarkView.swift  AIManagementView.swift  AIModelManager.swift  AddItemView.swift  ArchivedItemsView.swift  BarcodeScannerSheet.swift  BenchmarkRunner.swift  CHANGELOG.md  CLAUDE.md  CSVExporter.swift  Components.swift  EmbeddingService.swift  GenerationEngine.swift  HomeboxCatalog-Bridging-Header.h  HomeboxCatalogApp.swift  HomeboxClient.swift  HuggingFaceRepository.swift  Info.plist  ItemDetailView.swift  ItemsListView.swift  Keychain.swift  LLM_HANDOFF.md  LlamaBridge.h  LlamaBridge.mm  LlmKit.swift  LocalDatabase.swift  LocationDetailView.swift  LocationPickerSheet.swift  LocationsTabView.swift  ModelCatalog.swift  ModelDownloadManager.swift  Models.swift  NotificationManager.swift  OnboardingView.swift  PhotoSource.swift  README.md  SettingsView.swift  (+8 more)
.claude/: settings.json
.github/workflows/: android.yml  build-llama-xcframework.yml  build.yml
Frameworks/llama.xcframework/: Info.plist
Frameworks/llama.xcframework/ios-arm64/llama.framework/: llama
android/: .gitignore  keystore.jks  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: colors.xml  (+2 more)
android/gradle/: libs.versions.toml
android/llmkit/: build.gradle.kts
android/llmkit/src/main/: AndroidManifest.xml
android/llmkit/src/main/cpp/: CMakeLists.txt  llmkit.cpp
docs/: llmkit-framework-plan.md  llmkit-plan.md
scripts/: build-llama-xcframework.sh
(+63 files in other folders)
